# icfpcontest2015

./: .gitignore  CNAME  README.md  index.html  leader_board.html  problems.html  site.css  spec.html  story.html  writeups.html
bashkort_mages_demo/: README
irc/: complete_log.txt
judging/: custom_phrases.md  finalists.txt
judging/data_files/: custom_power  power_words  problist
judging/final-problems/: problem_26.json  problem_28.json  problem_30.json
judging/scripts/: add-brackets  find_light  individual_cloc_stats  interesting_queries.txt  linkLatest  run_all  run_all_lightning  run_all_lightning_oneteam  run_all_oneteam  run_one  run_one_custompower  run_one_illegalpower  run_one_nopower  run_one_notimeout  score_all  unpack
leaderboards/final/: leader_board.html  rankings.js
leaderboards/lightning-final/: leader_board.html  rankings.js  web_style.css
leaderboards/lightning-qualifying/: leader_board.html  rankings.js
leaderboards/qualifying/: leader_board.html  rankings.js
lovecraft/: a_jermyn.htm  a_jermyn.txt  aeons.htm  aeons.txt  alchemis.htm  alchemis.txt  allowable.htm  allowable.txt  alonzo_typer.htm  alonzo_typer.txt  astrophobos.htm  astrophobos.txt  azathoth.htm  azathoth.txt  battle_century.htm  battle_century.txt  beyond.htm  beyond.txt  book.htm  book.txt  bottles.htm  bottles.txt  bride.htm  bride.txt  burying_ground.htm  burying_ground.txt  c_d_ward.htm  c_d_ward.txt  c_m_eddy.htm  c_m_eddy.txt  cats.htm  cats.txt  catsdogs.htm  catsdogs.txt  cave.htm  cave.txt  celephai.htm  celephai.txt  challenge.htm  challenge.txt  (+255 more)
markov/: shaney.py
markov/dadadodo-1.04/: Makefile  README  dadadodo.c  dadadodo.h  dodotodo  files.c  files.h  generate.c  generate.h  hash.c  hash.h  lovecraft.data  parse.c  parse.h  parsei.h  version.h  yarandom.h
notes/: crazy-type-theory.md  information_hiding.md
publicity/: ICFP 2015 teaser.pages
src/hex/: .gitignore  LICENSE  README  hex.cabal  illegal_power  power
src/hex/src/: DB.hs  Evaluate.hs  Export.hs  Grid.hs  Hex.hs  LeaderBoard.hs  MakeProblem.hs  MakeProblem1.hs  Power.hs  Problem.hs  Sequences.hs  Server.hs  ShapeSets.hs  Sln.hs  Solution.hs  View.hs
src/hex/web/: custompower-rankings.js  editor.html  histo.html  illegalpower-rankings.js  jquery-ui.js  leader_board.html  nopower-rankings.js  power-rankings.js  rankings.js  style.css  view.html  view.js  watch.html
src/hex/web/problems/: icfp_pieces.txt  notes  problem_25.json  problem_27.json  problem_29.json  problem_31.json  problem_32.json  vancouver.txt
src/postfix-lambda/: .gitignore  README.org  church5.postlambda  postfixlambda.ipkg
src/postfix-lambda/src/: PostfixSTLC.idr  STLC.idr
src/postfix-lambda/src/Effect/: Quit.idr
src/postfix-lambda/src/PostfixSTLC/: Commands.idr  Compiler.idr  Shell.idr  Test.idr  Views.idr
src/simple-lambda/: CBN.hs
src/sized-lambda/: sized-lambda.cabal
src/sized-lambda/Language/: SizedLambda.hs
src/sized-lambda/Language/Regular/: Infinite.hs  Interval.hs  Property.hs
src/sized-lambda/Language/Regular/Interval/: QuickCheck.hs
src/submissions/: LICENSE  README.md  icfp-submissions.cabal  stack.yaml
src/submissions/app/: Main.hs
src/submissions/client/: .flowconfig  .gitignore  Makefile  package.json  webpack.config.js
src/submissions/client/lib/: api.js  app.js  event.js  polyfills.js  state.js
src/submissions/client/lib/components/: Main.js
src/submissions/migrations/: adds-power-score-column.txt  adds-seed-to-solutions.txt  changes-timestamp-to-timestamptz.txt  create-initial-tables.txt  removes-foreign-key-constraint-on-problem_id.txt
src/submissions/src/: Persona.hs
src/submissions/src/ICFP/: Config.hs  Database.hs  Internal.hs  Session.hs  Solution.hs  Team.hs  User.hs
src/submissions/src/Network/HTTP/: Authorization.hs  ContentDisposition.hs
src/submissions/static/: index.html
statistics/: cloc-overall.txt  stats.numbers
statistics/cloc_individual/: 105  109  115  116  120  123  126  127  128  129  133  134  136  139  140  143  145  148  15  150  152  154  16  162  164  165  166  167  169  17  170  173  175  176  18  180  183  187  189  192  (+93 more)
story/: Makefile  boards.md  notes.md  phrases.md  story.md  tweets.md
talk/: frictionless_bananas.pptx  unagi.pptx
tshirt/: commandlog.txt  cthulhu1-100-density.txt  cthulhu1-100.txt  cthulhu1-200-baseline.txt  cthulhu1-200-density-hex-phrase-colored.rtf  cthulhu1-200-density-hex-phrase.rtf  cthulhu1-200-density-hex.txt  cthulhu1-200-density.txt  cthulhu1-200.txt  cthulhu1-250-density-hex.rtf  cthulhu1-300-density-hex.rtf  cthulhu1-400.txt  cthulhu1-50-density.txt  cthulhu1-800.txt  cthulhu_side.ai  logos.ai  template-cthulhu.ai  template-text.ai  text_side.ai
