name:                hex
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          diatchki@galois.com
category:            Game
build-type:          Simple
extra-source-files:
  jquery.js,
  view.html
cabal-version:       >=1.10

executable hex
  main-is:             Server.hs
  other-modules:
    Hex,
    Sequences,
    ShapeSets,
    Problem,
    Export,
    Grid

  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
    base,
    vector,
    bytestring,
    aeson,
    snap-server,
    snap-core,
    text,
    filepath,
    transformers,
    directory,
    containers
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

executable hexEval
  main-is: Evaluate.hs
  other-modules:
    Hex,
    Sequences,
    Problem,
    Export,
    Grid,
    Power,
    DB

  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
    base,
    bytestring,
    containers,
    vector,
    aeson,
    text,
    filepath,
    postgresql-simple,
    directory

  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

executable hexLeaderBoard
  main-is: LeaderBoard.hs

  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
    base,
    containers,
    bytestring,
    old-time,
    aeson,
    text,
    directory,
    postgresql-simple,
    vector,
    filepath

  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

executable hexMakeProblems
  main-is: MakeProblem.hs

  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
    base,
    containers,
    filepath,
    directory,
    aeson,
    vector,
    bytestring,
    text
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010


executable hexView
  main-is: View.hs

  other-extensions:    OverloadedStrings, RecordWildCards
  build-depends:
    base,
    containers,
    filepath,
    directory,
    aeson,
    vector,
    bytestring,
    text,
    gloss
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
