name:                sized-lambda
version:             0.0
-- synopsis:            
-- description:         
homepage:            http://icfpcontest.org
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          dmwit@galois.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.SizedLambda, Language.Regular.Infinite
  -- other-modules:       
  other-extensions:    FlexibleContexts, TypeFamilies
  build-depends:       base                   >=4.8        && <4.9,
                       mtl                    >=2.2        && <2.3,
                       fgl                    >=5.5        && <5.6,
                       containers             >=0.5        && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -fno-warn-tabs
