name:                icfp-submissions
version:             0.1.0.0
synopsis:            Web app to accept submissions for the ICFP 2015 programming contest
description:         Please see README.md
homepage:            http://github.com/name/project
license:             AllRightsReserved
license-file:        LICENSE
author:              Galois, Inc.
copyright:           (c) 2015 Galois, Inc.
maintainer:          jesse@galois.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.HTTP.Authorization
                     , Network.HTTP.ContentDisposition
                     , Persona
                     , ICFP.Config
                     , ICFP.Database
                     , ICFP.Session
                     , ICFP.Solution
                     , ICFP.Team
                     , ICFP.User
  other-modules;       ICFP.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , crypto-api
                     , lens
                     , lucid
                     , mime-string
                     , mtl
                     , postgresql-simple
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , wreq
  default-language:    Haskell2010

executable icfp-submissions
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , either
                     , icfp-submissions
                     , lens
                     , lucid
                     , mime-string
                     , mtl
                     , postgresql-simple
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite icfp-submissions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , icfp-submissions
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
